--- a/.github/workflows/lambdacicd.yml
+++ b/.github/workflows/lambdacicd.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v4
       - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0c1d2e3
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ROLE-TO-ASSUME
           role-session-name: samplerolesession
