--- a/.github/workflows/lambdacicd.yml
+++ b/.github/workflows/lambdacicd.yml
@@ -3,8 +3,8 @@ name: CI/CD
 on:
   workflow_dispatch:
 env:
-  BUCKET_NAME : "BUCKET-NAME"
-  AWS_REGION : "AWS-REGION"
+  BUCKET_NAME : "BUCKET_NAME"
+  AWS_REGION : "AWS_REGION"
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read  # This is required for actions/checkout
