--- a/.github/workflows/lambdacicd.yml
+++ b/.github/workflows/lambdacicd.yml
@@ -22,4 +22,4 @@ jobs:
       # Upload a file to AWS s3
       - name:  Copy index.html to s3
         run: cat README.md |
-          aws s3 cp README.md s3://${{ secrets.BUCKET_NAME }}/lambda/file.txt \
+          # aws s3 cp README.md s3://${{ secrets.BUCKET_NAME }}/lambda/file.txt \
