--- a/.github/workflows/lambdacicd.yml
+++ b/.github/workflows/lambdacicd.yml
@@ -22,4 +22,5 @@ jobs:
       # Upload a file to AWS s3
       - name: Copy README.md to S3
         run: |
-          aws s3 sync ./ s3://${{ secrets.BUCKET_NAME }}lambda --delete --debug
+          BUCKET_NAME=${{ secrets.BUCKET_NAME }}
+          aws s3 sync ./ s3://$BUCKET_NAME/lambda --delete
