--- a/.github/workflows/lambdacicd.yml
+++ b/.github/workflows/lambdacicd.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Copy README.md to S3
         run: |
           BUCKET_NAME=${{ secrets.BUCKET_NAME }}
-          aws s3 sync ./ s3://$BUCKET_NAME/lambda --delete
+          aws s3 sync ./fourtooncookie-diaryimage-ai-apply-lambda s3://$BUCKET_NAME/lambda --delete
