--- a/.github/workflows/appspec.yml
+++ b/.github/workflows/appspec.yml
@@ -4,3 +4,4 @@ Resources:
       Type: AWS::Lambda::Function
       Properties:
         Name: "fourtooncookie-diaryimage-ai-apply-lambda"
+        CurrentVersion: "$LATEST"
