--- a/.github/workflows/appspec.yml
+++ b/.github/workflows/appspec.yml
@@ -4,4 +4,5 @@ Resources:
       Type: AWS::Lambda::Function
       Properties:
         Name: "fourtooncookie-diaryimage-ai-apply-lambda"
+        Alias: "live"
         CurrentVersion: "1"
