--- a/.github/workflows/appspec.yml
+++ b/.github/workflows/appspec.yml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         Name: "fourtooncookie-diaryimage-ai-apply-lambda"
         Alias: "live"
-        CurrentVersion: "1"
-        TargetVersion: "2"
+        CurrentVersion: 1
+        TargetVersion: 2
